fixed a minor height issue with the form on smaller screen heights

--- a/css/index.css
+++ b/css/index.css
@@ -232,17 +232,17 @@ header .main-menu .link {
   align-items: center;
   background: #252627;
   color: #ebebeb;
-  height: 8vh;
+  height: 15vh;
 }
 #contact-container .contact-section h1 {
-  padding-left: 20px;
   font-size: 3rem;
-  padding-top: 20px;
+  padding: 50px 20px;
 }
 #contact-container .contact-section form {
   margin-top: 100px;
   margin-left: 20px;
-  height: 65vh;
+  height: 100%;
+  padding-bottom: 50px;
 }
 #contact-container .contact-section form .form-controller {
   width: 70%;
@@ -257,9 +257,11 @@ header .main-menu .link {
 }
 #contact-container .contact-section form input {
   height: 60px;
+  padding-left: 10px;
 }
 #contact-container .contact-section form textarea {
   height: 200px;
+  padding: 10px 10px;
 }
 #contact-container .contact-section form .submit {
   height: auto;
