--- a/less/contact.less
+++ b/less/contact.less
@@ -9,19 +9,19 @@
       align-items: center;
       background: @black;
       color: @white;
-      height: 8vh;
+      height: 15vh;
     }
 
     h1 {
-      padding-left: 20px;
       font-size: 3rem;
-      padding-top: 20px;
+      padding: 50px 20px;
     }
 
     form {
       margin-top: 100px;
       margin-left: 20px;
-      height: 65vh;
+      height: 100%;
+      padding-bottom: 50px;
 
       .form-controller {
         width: 70%;
@@ -37,10 +37,12 @@
 
       input {
         height: 60px;
+        padding-left: 10px;
       }
 
       textarea {
         height: 200px;
+        padding: 10px 10px;
       }
 
       .submit {
